--- a/package.json
+++ b/package.json
@@ -11,14 +11,19 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cookieparser": "^0.1.0",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
     "express-sanitizer": "^1.0.5",
+    "express-session": "^1.17.1",
+    "express-sessions": "^1.0.1",
+    "jade": "^0.29.0",
     "method-override": "^3.0.0",
     "mongoose": "^5.10.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^6.0.1"
+    "passport-local-mongoose": "^6.0.1",
+    "pug": "^3.0.0"
   }
 }
