--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "connect-flash": "^0.1.1",
     "cookieparser": "^0.1.0",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
+    "express-flash": "^0.0.2",
     "express-sanitizer": "^1.0.5",
     "express-session": "^1.17.1",
     "express-sessions": "^1.0.1",
@@ -24,6 +26,7 @@
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.0.1",
-    "pug": "^3.0.0"
+    "pug": "^3.0.0",
+    "sessions": "^0.0.2-7"
   }
 }
